syntax = "proto3";

import "event.proto";

package api.pipe_message;

message PipeMessage {
    PipeSource source = 1;
    optional string cli_source_id = 2;
    optional uint32 plugin_source_id = 3;
    string name = 4;
    optional string payload = 5;
    repeated Arg args = 6;
    bool is_private = 7;
    optional uint32 clientId = 8;
    optional api.event.PaneId paneId = 9;
}

enum PipeSource {
  Cli = 0;
  Plugin = 1;
  Keybind = 2;
}

message Arg {
  string key = 1;
  string value = 2;
}
